--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "gitbot",
   "packageManager": "yarn@3.1.1",
   "type": "module",
+  "scripts": {
+    "start": "node src/index.js",
+    "register": "node src/register-commands.js"
+  },
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
+    "axios": "^0.26.0",
+    "cron": "^1.8.2",
+    "dayjs": "^1.10.7",
+    "discord-api-types": "^0.27.1",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0"
   },
